Group multiple activites
* Visualisation of multi-day rides possible
* Group per drag & drop
* Migrate activities-page to feed-style
  * year-filter only on statistics page
  * fetch new activity items when reaching page end
* introduce thumbnails per activity for map-preview of the route
* remove modal confirmation for re-calculation
