# src/main/java/de/sw1ld/ResponseFragment.java
@@ -1,0 +1,5 @@
+package de.sw1ld;
+
+import java.util.List;
+
+public record ResponseFragment(List<FeedItem> items, String nextEncodedCursor) {}
